# neu-users

./: .dockerignore  .gitignore  Makefile  dockerfile  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 1-issue.md
.github/workflows/: enforcer.yml  formatter.yml  linter.yml  release.yml  testing.yml
neu_users/: main.py
neu_users/config/: __init__.py  settings.py
neu_users/routes/: __init__.py  users.py
neu_users/schemas/: __init__.py  users.py
public/ui/schemas/: default.json  schema-no-simple.json
src/: logging.py  main.py  routes.py  schema.py  settings.py
src/routes/: __init__.py  users.py
src/schemas/: __init__.py  users.py
tests/: test_main.py
