[tool.poetry]
name = "neu-users"
version = "0.0.5"
description = "Users microservice for Neu"
authors = ["Viktor Karamanis"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.1" }
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"
bcrypt = "^4.2.0"
redis = "^5.0.8"
redis-om = "^0.3.2"
neu-sdk = { git = "https://github.com/poulet-lab/neu-sdk" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
